<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fb="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <android.support.v4.view.ViewPager
            android:id="@+id/pager_introduction"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            tools:listitem="@layout/viewpager_image"></android.support.v4.view.ViewPager>

        <RelativeLayout
            android:id="@+id/viewPagerIndicator"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_gravity="bottom"
            android:layout_marginTop="0dp"
            android:gravity="bottom">

            <LinearLayout
                android:id="@+id/viewPagerCountDots"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btn_next"
                    android:layout_width="42dip"
                    android:layout_height="42dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dip"
                    android:background="@drawable/nonselecteditem_dot"
                    android:visibility="gone" />

                <ImageButton
                    android:id="@+id/btn_finish"
                    android:layout_width="42dip"
                    android:layout_height="42dip"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="15dip"
                    android:background="@drawable/selecteditem_dot"
                    android:contentDescription="Let's start"
                    android:visibility="gone" />

            </LinearLayout>
        </RelativeLayout>
    </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="0.25"
            android:background="@color/initial_login"
            android:gravity="center"
            android:orientation="vertical">

            <com.biglynx.fulfiller.fonts.CustomFontBold
                android:id="@+id/joinfree_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/light_border"
                android:gravity="center"
                android:paddingBottom="13dp"
                android:paddingLeft="45dp"
                android:paddingRight="45dp"
                android:paddingTop="13dp"
                android:letterSpacing="0.2"
                android:text="@string/joinforfree"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/textview_dp16"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.biglynx.fulfiller.fonts.CustomFontLight
                    android:id="@+id/already_memeber_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alreadyfulfiller"
                    android:textColor="#FFFFFF"
                    android:letterSpacing="0.2"
                    android:textSize="@dimen/textview_dp16" />

                <com.biglynx.fulfiller.fonts.CustomFontBold
                    android:id="@+id/login_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/login"
                    android:letterSpacing="0.05"
                    android:textColor="@color/login"
                    android:textSize="@dimen/textview_dp18" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/initial_login"
        android:id="@+id/joinfree_LI"
        android:layout_gravity="bottom"
        android:visibility="gone"
        android:orientation="vertical"
        >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:src="@drawable/close_downarrowwhite"
            android:id="@+id/show_hide_imv"/>

        <com.biglynx.fulfiller.fonts.CustomFontBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itsfree"
            android:layout_gravity="center"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:textColor="#FFFFFF"
            android:textSize="@dimen/textview_dp18" />
        <com.biglynx.fulfiller.fonts.CustomFontLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nocommitments"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/textview_dp16" />
        <com.biglynx.fulfiller.fonts.CustomFontLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/longterm"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="#FFFFFF"
            android:layout_marginTop="15dp"
            android:textSize="@dimen/textview_dp16" />

        <LinearLayout
            android:id="@+id/social_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/logo"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fb_login_tv"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:drawableLeft="@drawable/ic_cast_dark"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/fbnew"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:visibility="gone"
                android:textSize="@dimen/textview_dp14" />

            <com.facebook.login.widget.LoginButton
                xmlns:facebook="http://schemas.android.com/apk/res-auto"
                android:id="@+id/login_button"
                android:layout_width="0dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textAllCaps="true"
                android:layout_weight="0.45"
                android:text="@string/fbnew"
                android:layout_height="40dp" />


            <com.biglynx.fulfiller.fonts.CustomFontLight
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.1"
                android:gravity="center"
                android:padding="0dp"
                android:text="@string/or"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/textview_dp14"
               />

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button"
                android:layout_width="0dp"
                android:layout_weight="0.45"
                android:layout_height="45dp"
                android:padding="0dp"
                android:layout_margin="5dp"
             />
            <TextView
                android:id="@+id/googlelogin_tv"
                android:layout_width="0dp"
                android:layout_weight="0.45"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#FFFFFF"
                android:visibility="gone"
                android:drawableLeft="@drawable/ic_cast_dark"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/googlenew"
                android:textAllCaps="true"
                android:textColor="#000"
                android:textSize="@dimen/textview_dp14" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="15dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
        <com.biglynx.fulfiller.fonts.CustomFontLight
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/learn"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="@dimen/textview_dp14"
            android:letterSpacing="0.15"
            android:textColor="#FFFFFF"
           ></com.biglynx.fulfiller.fonts.CustomFontLight>

        <com.biglynx.fulfiller.fonts.CustomFontBold
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clickhere"
            android:id="@+id/condition_click_tv"
            android:layout_gravity="center"
            android:gravity="center"
            android:letterSpacing="0.15"
            android:textSize="@dimen/textview_dp14"
            android:layout_marginLeft="5dp"
            android:textColor="@color/login"
           ></com.biglynx.fulfiller.fonts.CustomFontBold>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>